change last commit

--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<div> Hello</div>
-<header>something</header>
+<!DOCTYPE html>
+<html>
+    <header>git practice</header>
+    <h1>cookies would be good</h1>
+    <body>every cookie i make is flames</body>
+</html>
